resolved text overflowing issue. mistake noticed on putting class=box into class=col-9.

--- a/style.css
+++ b/style.css
@@ -42,3 +42,11 @@ body{
     padding-bottom:30px;
 }
 
+.shelf{
+    height:100%;
+    width:100%;
+}
+
+p{
+    position:absolute;
+}
